Add balance summary placeholder under team actions

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     </p>
 
     <!-- barra acciones equipos -->
-    <div class="flex justify-end gap-2 mb-4">
-      <button id="makeTeamsBtn" class="px-4 py-2 rounded-xl bg-indigo-600 text-white">Crear equipos</button>
-      <button id="shuffleTeamsBtn" class="px-4 py-2 rounded-xl bg-white border border-slate-200">Otra versión</button>
+    <div class="space-y-1 mb-4">
+      <div class="flex justify-end gap-2">
+        <button id="makeTeamsBtn" class="px-4 py-2 rounded-xl bg-indigo-600 text-white">Crear equipos</button>
+        <button id="shuffleTeamsBtn" class="px-4 py-2 rounded-xl bg-white border border-slate-200">Otra versión</button>
+      </div>
+      <p id="balanceInfo" class="text-right text-xs text-slate-500"></p>
     </div>
 
     <!-- layout 4 columnas desde tablet -->
