--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="bg-slate-50 text-slate-900">
   <div class="w-full max-w-none mx-auto p-4 md:p-6 space-y-6 md:min-h-screen">
     <header class="flex items-center justify-between">
-      <h1 class="text-2xl font-semibold tracking-tight">Generador de equipos Brafa</h1>
+      <h1 class="text-2xl font-semibold tracking-tight">Generador de equipos Brafaz</h1>
       <div class="flex gap-2">
         <button id="openFormBtn" class="px-3 py-2 rounded-xl bg-emerald-600 text-white text-sm">Nuevo jugador</button>
         <button id="pickDirBtn" class="px-3 py-2 rounded-xl bg-slate-900 text-white text-sm">Elegir carpeta de fichas</button>
