--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
 
       <!-- Equipo A -->
       <div id="teamAPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
-        <div class="flex items-center justify-between mb-3 gap-3">
-          <h2 class="text-lg font-medium">Blanco</h2>
+        <div class="flex items-start justify-between mb-3 gap-3">
+          <div>
+            <h2 class="text-lg font-medium">Blanco</h2>
+            <p id="teamAStats" class="text-xs text-slate-500 mt-1"></p>
+          </div>
           <div id="teamARadar" class="w-16 h-16 shrink-0"></div>
         </div>
         <div id="teamA" class="grid grid-cols-1 gap-3"></div>
@@ -68,8 +71,11 @@
 
       <!-- Equipo B -->
       <div id="teamBPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
-        <div class="flex items-center justify-between mb-3 gap-3">
-          <h2 class="text-lg font-medium">Peto</h2>
+        <div class="flex items-start justify-between mb-3 gap-3">
+          <div>
+            <h2 class="text-lg font-medium">Peto</h2>
+            <p id="teamBStats" class="text-xs text-slate-500 mt-1"></p>
+          </div>
           <div id="teamBRadar" class="w-16 h-16 shrink-0"></div>
         </div>
         <div id="teamB" class="grid grid-cols-1 gap-3"></div>
@@ -394,6 +400,57 @@ function avgSkill(p){
 function levelInt(p){ return Math.round(avgSkill(p)); }
 function ageFromYear(y){ const Y=+y||0; if(!Y) return 0; return new Date().getFullYear()-Y; }
 
+function average(values){
+  const valid = values.filter(v=> Number.isFinite(v));
+  if(!valid.length) return 0;
+  return valid.reduce((sum, value)=> sum + value, 0) / valid.length;
+}
+
+function averagePositive(values){
+  const valid = values.filter(v=> Number.isFinite(v) && v>0);
+  if(!valid.length) return null;
+  return valid.reduce((sum, value)=> sum + value, 0) / valid.length;
+}
+
+const TEAM_BALANCE_WEIGHTS = Object.freeze({
+  skill: 1,
+  peso: 0.2,
+  altura: 0.05
+});
+
+function balanceMetrics(teamAPlayers = [], teamBPlayers = []){
+  const avgSkillA = average(teamAPlayers.map(avgSkill));
+  const avgSkillB = average(teamBPlayers.map(avgSkill));
+
+  const avgPesoA = averagePositive(teamAPlayers.map(p=> +p.peso));
+  const avgPesoB = averagePositive(teamBPlayers.map(p=> +p.peso));
+
+  const avgAlturaA = averagePositive(teamAPlayers.map(p=> +p.altura));
+  const avgAlturaB = averagePositive(teamBPlayers.map(p=> +p.altura));
+
+  const diffSkill = Math.abs(avgSkillA - avgSkillB);
+  const diffPeso = (avgPesoA != null && avgPesoB != null) ? Math.abs(avgPesoA - avgPesoB) : null;
+  const diffAltura = (avgAlturaA != null && avgAlturaB != null) ? Math.abs(avgAlturaA - avgAlturaB) : null;
+
+  const total =
+    diffSkill * TEAM_BALANCE_WEIGHTS.skill +
+    (diffPeso ?? 0) * TEAM_BALANCE_WEIGHTS.peso +
+    (diffAltura ?? 0) * TEAM_BALANCE_WEIGHTS.altura;
+
+  return {
+    total,
+    detail: {
+      skill: diffSkill,
+      peso: diffPeso,
+      altura: diffAltura
+    },
+    averages: {
+      a: { skill: avgSkillA, peso: avgPesoA, altura: avgAlturaA },
+      b: { skill: avgSkillB, peso: avgPesoB, altura: avgAlturaB }
+    }
+  };
+}
+
 function levelColor(n){
   const clamp = (x,min,max)=> Math.max(min, Math.min(max, x));
   n = clamp(n, 0, 100);
@@ -481,45 +538,60 @@ function playerCard(p, opts = {}) {
   const mediaInt = levelInt(p);
   const ctx = opts.context || 'registry'; // registry | apuntados | team
   const draggable = ctx !== 'team';
-  const footer = ctx === 'registry'
-    ? `<button data-add="${p.id}" title="Apuntar" class="text-emerald-700 hover:text-emerald-900 text-sm">Apuntar</button>`
-    : (ctx === 'apuntados'
-      ? `<button data-remove="${p.id}" title="Quitar" class="text-slate-600 hover:text-slate-900 text-sm">Quitar</button>`
-      : '');
+  if (ctx === 'team') {
+    const params = paramsObj(p);
+    const paramsHtml = PARAM_KEYS.map((key) => {
+      const icon = PARAM_ICONS[key];
+      const val = Math.round(params[key] ?? 0);
+      return `<div class="flex items-center gap-1"><span>${icon}</span><span class="tabular-nums font-medium text-slate-700">${val}</span></div>`;
+    }).join('');
+    const miniRadar = radarMiniSVG(params, 70);
 
-  const params = paramsObj(p);
-  const paramsHtml = PARAM_KEYS.map((key) => {
-    const icon = PARAM_ICONS[key];
-    const val = Math.round(params[key] ?? 0);
-    return `<div class="flex items-center gap-1"><span>${icon}</span><span class="tabular-nums font-medium text-slate-700">${val}</span></div>`;
-  }).join('');
-  const miniRadar = radarMiniSVG(params, 70);
+    return `
+      <div class="rounded-xl border border-slate-200 bg-white p-3 shadow-sm hover:shadow transition"
+           ${draggable ? 'draggable="true"' : ''} data-drag-id="${p.id}">
+        <div class="flex items-start justify-between gap-3">
+          <div class="flex items-start gap-4">
+            <div class="flex flex-col items-center sm:items-start gap-2">
+              <div class="flex items-center gap-3">
+                <div class="text-5xl font-black leading-none text-slate-900">${mediaInt}</div>
+                <div class="w-14 h-14">${miniRadar || ''}</div>
+              </div>
+              <div class="flex items-center gap-1 text-[11px] uppercase tracking-[0.3em] text-slate-500"><span>⭐</span><span>Media</span></div>
+            </div>
+            <div class="space-y-2">
+              <div class="font-semibold leading-tight text-slate-900">${p.nombre} ${p.apellido}</div>
+              <div class="grid grid-cols-3 gap-x-3 gap-y-1 text-xs text-slate-600">
+                ${paramsHtml}
+              </div>
+            </div>
+          </div>
+          <div class="flex items-center gap-2">
+            <button data-edit="${p.id}" title="Editar" class="text-slate-500 hover:text-slate-800">ⓘ</button>
+          </div>
+        </div>
+        <div class="h-1.5 w-full rounded-b-[10px] mt-3" style="background-color:${levelColor(mediaInt)}"></div>
+      </div>`;
+  }
+
+  const isRegistry = ctx === 'registry';
+  const actionAttr = isRegistry ? `data-add="${p.id}"` : `data-remove="${p.id}"`;
+  const actionTitle = isRegistry ? 'Apuntar' : 'Quitar';
+  const actionLabel = isRegistry ? '+' : '-';
+  const name = `${p.nombre} ${p.apellido}`.trim();
+
+  const actionButtonClasses = isRegistry ? 'bg-emerald-600 hover:bg-emerald-700' : 'bg-rose-500 hover:bg-rose-600';
 
   return `
-    <div class="rounded-xl border border-slate-200 bg-white p-3 shadow-sm hover:shadow transition"
+    <div class="rounded-xl border border-slate-200 bg-white px-3 py-2 shadow-sm hover:shadow transition flex items-center justify-between gap-3"
          ${draggable ? 'draggable="true"' : ''} data-drag-id="${p.id}">
-      <div class="flex items-start justify-between gap-3">
-        <div class="flex items-start gap-4">
-          <div class="flex flex-col items-center sm:items-start gap-2">
-            <div class="flex items-center gap-3">
-              <div class="text-5xl font-black leading-none text-slate-900">${mediaInt}</div>
-              <div class="w-14 h-14">${miniRadar || ''}</div>
-            </div>
-            <div class="flex items-center gap-1 text-[11px] uppercase tracking-[0.3em] text-slate-500"><span>⭐</span><span>Media</span></div>
-          </div>
-          <div class="space-y-2">
-            <div class="font-semibold leading-tight text-slate-900">${p.nombre} ${p.apellido}</div>
-            <div class="grid grid-cols-3 gap-x-3 gap-y-1 text-xs text-slate-600">
-              ${paramsHtml}
-            </div>
-          </div>
-        </div>
-        <div class="flex items-center gap-2">
-          <button data-edit="${p.id}" title="Editar" class="text-slate-500 hover:text-slate-800">ⓘ</button>
-        </div>
+      <div class="min-w-0">
+        <p class="text-sm font-semibold text-slate-900 truncate">Nivel ${mediaInt} · ${name || 'Sin nombre'}</p>
       </div>
-      ${footer ? `<div class="mt-3 flex justify-end">${footer}</div>` : ''}
-      <div class="h-1.5 w-full rounded-b-[10px] mt-3" style="background-color:${levelColor(mediaInt)}"></div>
+      <div class="flex items-center gap-1">
+        <button data-edit="${p.id}" title="Ver ficha" class="px-2 py-1 rounded-lg text-sm text-slate-500 hover:text-slate-800">ⓘ</button>
+        <button ${actionAttr} title="${actionTitle}" class="w-8 h-8 rounded-full text-white text-lg leading-none flex items-center justify-center ${actionButtonClasses}">${actionLabel}</button>
+      </div>
     </div>`;
 }
 
@@ -951,8 +1023,14 @@ function renderPlayers(){
   const exclude = new Set(state.apuntados);
   const list = state.players
     .filter(p => !exclude.has(p.id))
-    .sort((a,b)=> a.apellido.localeCompare(b.apellido)||a.nombre.localeCompare(b.nombre))
-    .filter(p => (p.nombre+' '+p.apellido).toLowerCase().includes(q));
+    .filter(p => (p.nombre+' '+p.apellido).toLowerCase().includes(q))
+    .sort((a,b)=> {
+      const levelDiff = levelInt(b) - levelInt(a);
+      if (levelDiff !== 0) return levelDiff;
+      const surname = a.apellido.localeCompare(b.apellido);
+      if (surname !== 0) return surname;
+      return a.nombre.localeCompare(b.nombre);
+    });
   playersGrid.innerHTML = list.length ? list.map(p=>playerCard(p,{context:'registry'})).join('') : `<p class="text-sm text-slate-500">Sin jugadores.</p>`;
 
   playersGrid.querySelectorAll('[data-add]').forEach(el=> el.addEventListener('click', ()=> addApuntado(el.dataset.add)));
@@ -978,6 +1056,8 @@ function renderTeams(a=[],b=[]){
   const teamBEl=document.getElementById('teamB');
   const sumAEl=document.getElementById('sumA');
   const sumBEl=document.getElementById('sumB');
+  const teamAStatsEl=document.getElementById('teamAStats');
+  const teamBStatsEl=document.getElementById('teamBStats');
   const balanceInfo=document.getElementById('balanceInfo');
   const teamARadarEl=document.getElementById('teamARadar');
   const teamBRadarEl=document.getElementById('teamBRadar');
@@ -1002,19 +1082,43 @@ function renderTeams(a=[],b=[]){
   renderTeamRadar(teamARadarEl, a);
   renderTeamRadar(teamBRadarEl, b);
 
-  const avg = arr=> arr.length? arr.reduce((s,x)=>s+x,0)/arr.length : 0;
-  const avgScoreA = avg(a.map(avgSkill));
-  const avgScoreB = avg(b.map(avgSkill));
-  const avgAgeA = avg(a.map(p=> ageFromYear(p.nacimiento)));
-  const avgAgeB = avg(b.map(p=> ageFromYear(p.nacimiento)));
-  const avgPesoA = avg(a.map(p=> +p.peso||0));
-  const avgPesoB = avg(b.map(p=> +p.peso||0));
+  const balance = balanceMetrics(a, b);
+  const avgScoreA = balance.averages.a.skill;
+  const avgScoreB = balance.averages.b.skill;
+  const avgPesoA = balance.averages.a.peso;
+  const avgPesoB = balance.averages.b.peso;
+  const avgAlturaA = balance.averages.a.altura;
+  const avgAlturaB = balance.averages.b.altura;
+  const avgAgeA = averagePositive(a.map(p=> ageFromYear(p.nacimiento)));
+  const avgAgeB = averagePositive(b.map(p=> ageFromYear(p.nacimiento)));
 
-  sumAEl.textContent = `Medias → ⭐ ${avgScoreA.toFixed(1)} | Edad ${avgAgeA.toFixed(1)} | Peso ${avgPesoA.toFixed(1)} kg`;
-  sumBEl.textContent = `Medias → ⭐ ${avgScoreB.toFixed(1)} | Edad ${avgAgeB.toFixed(1)} | Peso ${avgPesoB.toFixed(1)} kg`;
+  const statsText = (count, avgScore, avgPeso, avgAltura)=>{
+    if(!count) return '⭐ — · Peso — · Altura —';
+    const pesoText = avgPeso!=null ? `${avgPeso.toFixed(1)} kg` : '—';
+    const alturaText = avgAltura!=null ? `${avgAltura.toFixed(1)} cm` : '—';
+    return `⭐ ${avgScore.toFixed(1)} · Peso ${pesoText} · Altura ${alturaText}`;
+  };
 
-  const diff=Math.abs(a.reduce((s,p)=>s+avgSkill(p),0) - b.reduce((s,p)=>s+avgSkill(p),0)).toFixed(2);
-  if (balanceInfo) balanceInfo.textContent = a.length && b.length ? `Diferencia absoluta: ${diff}` : '';
+  if(teamAStatsEl) teamAStatsEl.textContent = statsText(a.length, avgScoreA, avgPesoA, avgAlturaA);
+  if(teamBStatsEl) teamBStatsEl.textContent = statsText(b.length, avgScoreB, avgPesoB, avgAlturaB);
+
+  const ageText = (avgAge)=>{
+    if(avgAge==null) return 'Edad media sin datos';
+    return `Edad media ${avgAge.toFixed(1)} años`;
+  };
+  sumAEl.textContent = a.length ? ageText(avgAgeA) : '';
+  sumBEl.textContent = b.length ? ageText(avgAgeB) : '';
+
+  if (balanceInfo) {
+    if (a.length && b.length) {
+      const parts = [`⭐ ${balance.detail.skill.toFixed(2)}`];
+      if (balance.detail.peso != null) parts.push(`Peso ${balance.detail.peso.toFixed(2)} kg`);
+      if (balance.detail.altura != null) parts.push(`Altura ${balance.detail.altura.toFixed(2)} cm`);
+      balanceInfo.textContent = `Diferencias medias → ${parts.join(' | ')}`;
+    } else {
+      balanceInfo.textContent = '';
+    }
+  }
 }
 
 function renderAll(){ renderPlayers(); renderApuntados(); renderTeams(); }
@@ -1068,17 +1172,29 @@ function makeTeams(seed=null){
   const players=selected.slice(); let best=null, bestDiff=Infinity; const tries=1024;
   const rnd=(s)=>{ let x=s||Date.now(); return ()=> (x^=x<<13, x^=x>>>17, x^=x<<5, (x>>>0)/0xFFFFFFFF); };
   for(let i=0;i<tries;i++){
-    const r=rnd((seed||state.lastSeed)+i); const arr=players.slice();
+    const randomSeed = (seed||state.lastSeed)+i;
+    const r=rnd(randomSeed); const arr=players.slice();
     for(let j=arr.length-1;j>0;j--){ const k=Math.floor(r()*(j+1)); [arr[j],arr[k]]=[arr[k],arr[j]]; }
-    const a=[], b=[]; let sa=0,sb=0;
-    arr.sort((p,q)=> avgSkill(q)-avgSkill(p));
+    arr.sort((p,q)=>{
+      const diff = avgSkill(q)-avgSkill(p);
+      if(Math.abs(diff) < 0.01) return r()-0.5;
+      return diff;
+    });
+    const teamA=[], teamB=[];
     for(const p of arr){
-      if(a.length<5 && (sa<=sb || b.length>=5)){ a.push(p); sa+=avgSkill(p); }
-      else { b.push(p); sb+=avgSkill(p); }
+      if(teamA.length>=5){ teamB.push(p); continue; }
+      if(teamB.length>=5){ teamA.push(p); continue; }
+      const diffIfA = balanceMetrics([...teamA, p], teamB).total;
+      const diffIfB = balanceMetrics(teamA, [...teamB, p]).total;
+      if(diffIfA<=diffIfB){ teamA.push(p); }
+      else { teamB.push(p); }
     }
-    const diff=Math.abs(sa-sb); if(diff<bestDiff){ bestDiff=diff; best={a,b}; if(bestDiff<0.01) break; }
+    const diff=balanceMetrics(teamA, teamB).total;
+    if(diff<bestDiff){ bestDiff=diff; best={a:teamA, b:teamB}; if(bestDiff<0.01) break; }
   }
-  state.lastSeed=(state.lastSeed+7919)%1_000_000_007; saveState(); renderTeams(best.a,best.b);
+  state.lastSeed=(state.lastSeed+7919)%1_000_000_007; saveState();
+  if(best){ renderTeams(best.a,best.b); }
+  else { renderTeams(players.slice(0,5), players.slice(5,10)); }
 }
 
 /* ---------- Init ---------- */
