--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- layout 4 columnas desde tablet -->
     <section id="layout4col" class="grid grid-cols-1 gap-4 md:grid-cols-4 md:gap-6 md:h-[calc(100vh-160px)]">
       <!-- Registrados -->
-      <div id="registradosPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
+      <div id="registradosPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:row-span-2 md:h-full md:overflow-auto scroll-mt-28">
         <div class="flex items-center justify-between mb-4">
           <h2 class="text-lg font-medium">Registrados</h2>
           <input id="searchInput" placeholder="Buscar…" class="px-3 py-2 rounded-xl border border-slate-200 text-sm" />
@@ -47,7 +47,7 @@
       </div>
 
       <!-- Apuntados -->
-      <div id="apuntadosPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
+      <div id="apuntadosPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:row-span-2 md:h-full md:overflow-auto scroll-mt-28">
         <div class="flex items-center justify-between mb-4">
           <h2 class="text-lg font-medium">Convocados</h2>
           <button id="clearApuntadosBtn" class="px-3 py-2 rounded-xl bg-white border border-slate-200 text-sm">Vaciar</button>
@@ -56,8 +56,19 @@
         <p class="text-xs text-slate-500 mt-3">Necesitas exactamente 10 para generar dos equipos.</p>
       </div>
 
+      <section id="comparisonPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 space-y-4 md:col-span-2 md:col-start-3">
+        <div class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between">
+          <h2 class="text-lg font-medium text-slate-900">Comparativa de perfiles</h2>
+          <div id="comparisonLegend" class="flex flex-wrap items-center gap-3 text-sm text-slate-600"></div>
+        </div>
+        <div id="comparisonRadar" class="relative w-full h-64 md:h-72 flex items-center justify-center">
+          <div class="text-sm text-slate-400">Genera ambos equipos para ver la comparación.</div>
+        </div>
+        <p id="comparisonNote" class="text-xs text-slate-500"></p>
+      </section>
+
       <!-- Equipo A -->
-      <div id="teamAPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
+      <div id="teamAPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:col-start-3 md:row-start-2 md:h-full md:overflow-auto scroll-mt-28">
         <div class="flex items-start justify-between mb-3 gap-3">
           <div class="w-full">
             <h2 class="text-lg font-medium">Blanco</h2>
@@ -70,7 +81,7 @@
       </div>
 
       <!-- Equipo B -->
-      <div id="teamBPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:h-full md:overflow-auto scroll-mt-28">
+      <div id="teamBPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 md:col-start-4 md:row-start-2 md:h-full md:overflow-auto scroll-mt-28">
         <div class="flex items-start justify-between mb-3 gap-3">
           <div class="w-full">
             <h2 class="text-lg font-medium">Peto</h2>
@@ -81,17 +92,6 @@
         <div id="teamB" class="grid grid-cols-1 gap-3"></div>
         <p id="sumB" class="mt-3 text-xs text-slate-500"></p>
       </div>
-    </section>
-
-    <section id="comparisonPanel" class="bg-white rounded-2xl shadow-sm border border-slate-200 p-4 md:p-6 space-y-4">
-      <div class="flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between">
-        <h2 class="text-lg font-medium text-slate-900">Comparativa de perfiles</h2>
-        <div id="comparisonLegend" class="flex flex-wrap items-center gap-3 text-sm text-slate-600"></div>
-      </div>
-      <div id="comparisonRadar" class="relative w-full h-64 md:h-72 flex items-center justify-center">
-        <div class="text-sm text-slate-400">Genera ambos equipos para ver la comparación.</div>
-      </div>
-      <p id="comparisonNote" class="text-xs text-slate-500"></p>
     </section>
   </div>
 
